@@ -2,7 +2,7 @@
 # Kernel/Modules/CustomerTicketAttachment.pm - to get the attachments
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CustomerTicketAttachment.pm,v 1.17 2009-08-18 12:52:53 mh Exp $
+# $Id: CustomerTicketAttachment.pm,v 1.18 2009-09-28 07:20:09 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -15,7 +15,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.17 $) [1];
+$VERSION = qw($Revision: 1.18 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -131,8 +131,8 @@ sub Run {
                 );
 
                 # replace charset in content
-                $Data{Content}     =~ s/$Charset/utf8/gi;
-                $Data{ContentType} =~ s/$Charset/utf8/gi;
+                $Data{Content}     =~ s/$Charset/utf-8/gi;
+                $Data{ContentType} =~ s/$Charset/utf-8/gi;
             }
         }
 
